--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,8 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<!-- Spring Native 0.12.1 only supports Spring Boot 2.7.1 -->
-		<version>2.7.1</version>
+		<version>3.3.2</version>
 		<relativePath/>
 	</parent>
 	<groupId>com.stein</groupId>
@@ -16,15 +15,8 @@
 	<description>MyEnergi api</description>
 	<properties>
 		<java.version>11</java.version>
-		<docker-registry>docker.io</docker-registry>
-		<docker-registry-publish>false</docker-registry-publish>
-		<docker-registry-user/>
-		<docker-registry-password/>
-		<docker-image-name>${docker-registry}/${project.artifactId}:${project.version}</docker-image-name>
-		<apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
 		<modelmapper.version>2.4.4</modelmapper.version>
 		<springdoc.version>1.6.9</springdoc.version>
-		<springframework-experimental.version>0.12.1</springframework-experimental.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,16 +40,6 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.experimental</groupId>
-			<artifactId>spring-native</artifactId>
-			<version>${springframework-experimental.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-native</artifactId>
-			<version>${springdoc.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
@@ -70,9 +52,8 @@
 			<artifactId>spring-retry</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>${apache-httpcomponents.version}</version>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.zaxxer</groupId>
@@ -89,6 +70,17 @@
 			<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.cloud.functions</groupId>
+			<artifactId>functions-framework-api</artifactId>
+			<version>1.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.3.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -101,55 +93,48 @@
 	</dependencies>
 	<repositories>
 		<repository>
-			<id>spring-release</id>
-			<name>Spring release</name>
-			<url>https://repo.spring.io/release</url>
+			<id>mavencentral</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+		<repository>
+			<id>spring-releases</id>
+			<url>https://repo.spring.io/libs-release</url>
+		</repository>
+		<repository>
+			<id>spring-milestone</id>
+			<name>Spring milestone</name>
+			<url>https://repo.spring.io/milestone/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
-			<id>spring-release</id>
-			<name>Spring release</name>
-			<url>https://repo.spring.io/release</url>
+			<id>mavencentral</id>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>spring-releases</id>
+			<url>https://repo.spring.io/libs-release</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.experimental</groupId>
-				<artifactId>spring-aot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>generate</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!--
+                  Google Cloud Functions Framework Maven plugin
+
+                  This plugin allows you to run Cloud Functions Java code
+                  locally. Use the following terminal command to run a
+                  given function locally:
+
+                  mvn function:run -Drun.functionTarget=your.package.yourFunction
+                -->
+				<groupId>com.google.cloud.functions</groupId>
+				<artifactId>function-maven-plugin</artifactId>
+				<version>0.11.0</version>
 				<configuration>
-					<image>
-						<name>${docker-image-name}</name>
-						<builder>paketobuildpacks/builder:tiny</builder>
-						<buildpacks>
-							<buildpack>gcr.io/paketo-buildpacks/java-native-image:7.28.0</buildpack>
-						</buildpacks>
-						<publish>${docker-registry-publish}</publish>
-						<env>
-							<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
-							<BP_JVM_VERSION>11</BP_JVM_VERSION>
-							<BP_NATIVE_IMAGE_BUILD_ARGUMENTS></BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
-						</env>
-					</image>
-					<docker>
-                        <publishRegistry>
-                            <username>${docker-registry-user}</username>
-                            <password>${docker-registry-password}</password>
-                        </publishRegistry>
-                    </docker>
+					<functionTarget>com.stein.myenergi.functions.PersistZappiData</functionTarget>
+					<functionTarget>com.stein.myenergi.functions.ZappiHistory</functionTarget>
+					<functionTarget>com.stein.myenergi.functions.ZappiStatus</functionTarget>
 				</configuration>
 			</plugin>
 		</plugins>
