--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.2</version>
+		<version>2.7.1</version>
 		<relativePath/>
 	</parent>
 	<groupId>com.stein</groupId>
@@ -15,6 +15,7 @@
 	<description>MyEnergi api</description>
 	<properties>
 		<java.version>11</java.version>
+		<apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
 		<modelmapper.version>2.4.4</modelmapper.version>
 		<springdoc.version>1.6.9</springdoc.version>
 	</properties>
@@ -39,9 +40,16 @@
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
 		</dependency>
+		<!-- spring boot 3.3.x , java 17
 		<dependency>
 			<groupId>org.apache.httpcomponents.client5</groupId>
 			<artifactId>httpclient5</artifactId>
+		</dependency> 
+		-->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${apache-httpcomponents.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.modelmapper</groupId>
