--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,8 @@
 	<description>MyEnergi api</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.target>11</maven.compiler.target>
+    	<maven.compiler.source>11</maven.compiler.source>
 		<apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
 		<modelmapper.version>2.4.4</modelmapper.version>
 		<springdoc.version>1.6.9</springdoc.version>
