--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.1</version>
-		<relativePath/>
-	</parent>
 	<groupId>com.stein</groupId>
 	<artifactId>myenergi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,52 +10,26 @@
 	<properties>
 		<java.version>11</java.version>
 		<maven.compiler.target>11</maven.compiler.target>
-    	<maven.compiler.source>11</maven.compiler.source>
-		<apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
+		<maven.compiler.source>11</maven.compiler.source>
+		<apache-httpcomponents.version>5.3.1</apache-httpcomponents.version>
 		<modelmapper.version>2.4.4</modelmapper.version>
-		<springdoc.version>1.6.9</springdoc.version>
+		<jackson.version>2.9.8</jackson.version>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-aop</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.retry</groupId>
-			<artifactId>spring-retry</artifactId>
-		</dependency>
-		<!-- spring boot 3.3.x , java 17
-		<dependency>
 			<groupId>org.apache.httpcomponents.client5</groupId>
 			<artifactId>httpclient5</artifactId>
-		</dependency> 
-		-->
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
 			<version>${apache-httpcomponents.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>${modelmapper.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.cloud.functions</groupId>
@@ -74,11 +42,6 @@
 			<artifactId>firebase-admin</artifactId>
 			<version>9.3.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
@@ -86,13 +49,8 @@
 			<url>https://repo.maven.apache.org/maven2</url>
 		</repository>
 		<repository>
-			<id>spring-releases</id>
-			<url>https://repo.spring.io/libs-release</url>
-		</repository>
-		<repository>
-			<id>spring-milestone</id>
-			<name>Spring milestone</name>
-			<url>https://repo.spring.io/milestone/</url>
+			<id>mavenicm</id>
+			<url>https://maven.icm.edu.pl/artifactory/repo/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
@@ -101,8 +59,8 @@
 			<url>https://repo.maven.apache.org/maven2</url>
 		</pluginRepository>
 		<pluginRepository>
-			<id>spring-releases</id>
-			<url>https://repo.spring.io/libs-release</url>
+			<id>mavenicm</id>
+			<url>https://maven.icm.edu.pl/artifactory/repo/</url>
 		</pluginRepository>
 	</pluginRepositories>
 	<build>
@@ -116,16 +74,41 @@
                   given function locally:
 
                   mvn function:run -Drun.functionTarget=your.package.yourFunction
+
+				  https://github.com/GoogleCloudPlatform/functions-framework-java/blob/main/function-maven-plugin/src/main/java/com/google/cloud/functions/plugin/DeployFunction.java
                 -->
 				<groupId>com.google.cloud.functions</groupId>
 				<artifactId>function-maven-plugin</artifactId>
 				<version>0.11.0</version>
-				<configuration>
-					<name>myenergi-app</name>
-					<functionTarget>com.stein.myenergi.functions.PersistZappiData</functionTarget>
-					<functionTarget>com.stein.myenergi.functions.ZappiHistory</functionTarget>
-					<functionTarget>com.stein.myenergi.functions.ZappiStatus</functionTarget>
-				</configuration>
+				<executions>
+					<execution>
+						<id>persist-zappi-data</id>
+						<configuration>
+							<name>myenergi-app-persist-zappi-data</name>
+							<allowUnauthenticated>true</allowUnauthenticated>
+							<runtime>11</runtime>
+							<functionTarget>com.stein.myenergi.functions.PersistZappiData</functionTarget>
+						</configuration>
+					</execution>
+					<execution>
+						<id>zappi-history</id>
+						<configuration>
+							<name>myenergi-app-zappi-history</name>
+							<allowUnauthenticated>true</allowUnauthenticated>
+							<runtime>11</runtime>
+							<functionTarget>com.stein.myenergi.functions.ZappiHistory</functionTarget>
+						</configuration>
+					</execution>
+					<execution>
+						<id>zappi-status</id>
+						<configuration>
+							<name>myenergi-app-zappi-status</name>
+							<allowUnauthenticated>true</allowUnauthenticated>
+							<runtime>11</runtime>
+							<functionTarget>com.stein.myenergi.functions.ZappiStatus</functionTarget>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
