--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -80,35 +80,21 @@
 				<groupId>com.google.cloud.functions</groupId>
 				<artifactId>function-maven-plugin</artifactId>
 				<version>0.11.0</version>
-				<executions>
-					<execution>
-						<id>persist-zappi-data</id>
-						<configuration>
-							<name>myenergi-app-persist-zappi-data</name>
-							<allowUnauthenticated>true</allowUnauthenticated>
-							<runtime>11</runtime>
-							<functionTarget>com.stein.myenergi.functions.PersistZappiData</functionTarget>
-						</configuration>
-					</execution>
-					<execution>
-						<id>zappi-history</id>
-						<configuration>
-							<name>myenergi-app-zappi-history</name>
-							<allowUnauthenticated>true</allowUnauthenticated>
-							<runtime>11</runtime>
-							<functionTarget>com.stein.myenergi.functions.ZappiHistory</functionTarget>
-						</configuration>
-					</execution>
-					<execution>
-						<id>zappi-status</id>
-						<configuration>
-							<name>myenergi-app-zappi-status</name>
-							<allowUnauthenticated>true</allowUnauthenticated>
-							<runtime>11</runtime>
-							<functionTarget>com.stein.myenergi.functions.ZappiStatus</functionTarget>
-						</configuration>
-					</execution>
-				</executions>
+				<configuration>
+					<name>myenergi-app-persist-zappi-data</name>
+					<allowUnauthenticated>true</allowUnauthenticated>
+					<projectId>myenergi-app</projectId>
+					<region>europe-west1</region>
+					<runtime>java11</runtime>
+					<!-- EXAMPLE yaml (ensure the firebase_admin_sdk json is in your resources folder)
+					MYENERGI_HUB_SERIAL: "(v)hub sn"
+					MYENERGI_PASSWORD: "api-key"
+					FIREBASE_DATABASE: "https://my-project-id-default-rtdb.europe-west1.firebasedatabase.app"
+					FIREBASE_ADMIN_SDK: "/my-project-id-firebase-adminsdk.json"
+					-->
+					<deploy.envvarsfile>envvars.yaml</deploy.envvarsfile>
+					<functionTarget>com.stein.myenergi.functions.PersistZappiData</functionTarget>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
