--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,25 +10,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.2.0",
-    "@angular/cdk": "15.2.0",
-    "@angular/common": "15.2.0",
-    "@angular/compiler": "15.2.0",
-    "@angular/core": "15.2.0",
-    "@angular/forms": "15.2.0",
-    "@angular/material": "^15.2.0",
-    "@angular/platform-browser": "15.2.0",
-    "@angular/platform-browser-dynamic": "15.2.0",
+    "@angular/animations": "18.2.2",
+    "@angular/cdk": "18.2.2",
+    "@angular/common": "18.2.2",
+    "@angular/compiler": "18.2.2",
+    "@angular/core": "18.2.2",
+    "@angular/fire": "^18.0.1",
+    "@angular/forms": "18.2.2",
+    "@angular/material": "^18.2.2",
+    "@angular/platform-browser": "18.2.2",
+    "@angular/platform-browser-dynamic": "18.2.2",
     "chart.js": "4.2.1",
     "ng2-charts": "4.1.1",
     "rxjs": "7.8.0",
     "tslib": "2.5.0",
-    "zone.js": "0.12.0"
+    "zone.js": "0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.0",
-    "@angular/cli": "^15.2.0",
-    "@angular/compiler-cli": "^15.2.0",
+    "@angular-devkit/build-angular": "^18.2.1",
+    "@angular/cli": "^18.2.1",
+    "@angular/compiler-cli": "^18.2.2",
     "@types/jasmine": "~4.3.1",
     "@types/node": "^18.14.2",
     "autoprefixer": "^10.4.13",
@@ -39,6 +40,6 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.21",
-    "typescript": "~4.9.5"
+    "typescript": "~5.4.5"
   }
 }
