--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "frontend",
+    "predeploy": "npm ci --prefix frontend && npm run --prefix frontend build",
+    "public": "frontend/dist/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -12,5 +13,8 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "database": {
+    "rules": "database.rules.json"
   }
 }
